base/src/test/resources/failure/scope/re-prim.aya.txt
In file $FILE:3:5 ->

  1 |   prim I
  2 |   prim coe
  3 |   prim coe
    |        ^-^

Error: Redefinition of primitive `coe`

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
